--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="error" id="pwd5">*password should be always end with a number</div>
         </div>
         <div class="footer"><div  class="footer1">Hey! Can You Find A Best Password If All Requirement Star Mark Green(Yes/No)</div>
-                <input type="text" id="submit"/>  
-                <input type="submit" value="submit" id="subm">    
+                <input type="text" id="submit" />  
+                <input type="submit" value="submit" id="subm" onclick="render();">    
     </div>
     </div>
 </body>
